--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Konvy Accounts</title>
+<title>Konvy Accounts — Owner Panel</title>
 <style>
-:root{ --bg:#000; --fg:#fff; --muted:#bdbdbd; --accent:#fff; --green:#0f0; --red:#f33; --orange:#f90; }
+:root{ --bg:#000; --fg:#fff; --muted:#bdbdbd; --accent:#fff; --green:#0f0; --red:#f33; }
 *{box-sizing:border-box}
 html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial;color:var(--fg);background:var(--bg);}
 body{display:flex;flex-direction:column;}
@@ -18,8 +18,8 @@ main{flex:1;display:flex;overflow:hidden;}
 .content{flex:1;padding:24px;overflow-y:auto;}
 h2{margin-top:0;color:var(--accent);}
 .card{background:rgba(255,255,255,0.02);padding:20px;border-radius:12px;margin-bottom:12px;}
-input,button,textarea{font-size:14px;}
-input[type=text],input[type=password],textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);background:transparent;color:var(--fg);}
+input,button{font-size:14px;}
+input[type=text],input[type=password]{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);background:transparent;color:var(--fg);}
 button{padding:10px;border:none;border-radius:8px;background:var(--fg);color:var(--bg);cursor:pointer;font-weight:700;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);}
@@ -31,15 +31,10 @@ th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);
 .switcher button.active{background:var(--accent);color:var(--bg);}
 .status-used{color:var(--red);font-weight:700;}
 .status-unused{color:var(--green);font-weight:700;}
-.status-pending{color:var(--orange);font-weight:700;}
 .delete-btn{background:red;color:#fff;padding:2px 6px;border-radius:4px;font-size:12px;cursor:pointer;}
-.ticket-tab{padding:6px 8px;border:1px solid rgba(255,255,255,0.1);border-radius:6px;margin-bottom:4px;cursor:pointer;}
-.ticket-tab.active{background:var(--accent);color:var(--bg);}
-.message{margin-bottom:6px;padding:6px 8px;border-radius:6px;background:rgba(255,255,255,0.05);}
 </style>
 </head>
 <body>
-
 <!-- AUTH SCREEN -->
 <div id="auth-screen">
   <div class="card">
@@ -57,7 +52,7 @@ th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);
       <button type="submit">Sign In</button>
     </form>
 
-    <form id="signup-form" class="hidden">
+    <form id="signup-form" style="display:none;">
       <label>Username</label>
       <input type="text" id="signup-username" placeholder="Username" required>
       <label>Email</label>
@@ -82,7 +77,6 @@ th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);
     <button id="menu-dashboard" class="active">Dashboard</button>
     <button id="menu-redeem">Redeem Key</button>
     <button id="menu-orders">My Orders</button>
-    <button id="menu-ticket">Open Ticket</button>
     <button id="menu-owner" class="hidden">Owner Panel</button>
   </div>
   <div class="content" id="main-content">
@@ -103,19 +97,10 @@ th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);
       <h2>My Orders</h2>
       <table>
         <thead>
-          <tr><th>Product</th><th>Redeemed At</th><th>Status</th></tr>
+          <tr><th>Product</th><th>Redeemed At</th></tr>
         </thead>
         <tbody id="orders-list"></tbody>
       </table>
-    </div>
-
-    <div id="ticket-view" class="hidden">
-      <h2>Tickets</h2>
-      <div class="card">
-        <div id="ticket-tabs"></div>
-        <textarea id="message-input" placeholder="Type your message..."></textarea>
-        <button id="send-message-btn">Send</button>
-      </div>
     </div>
 
     <div id="owner-view" class="hidden">
@@ -160,18 +145,12 @@ const auth = firebase.auth();
 const db = firebase.firestore();
 
 // Elements
-const btnLogin = document.getElementById("btn-login");
-const btnSignup = document.getElementById("btn-signup");
-const loginForm = document.getElementById("login-form");
-const signupForm = document.getElementById("signup-form");
-const authScreen = document.getElementById("auth-screen");
-const welcomeEl = document.getElementById("welcome");
-const userEmailEl = document.getElementById("user-email");
-const logoutBtn = document.getElementById("logout-btn");
+const welcomeEl=document.getElementById('welcome');
+const userEmailEl=document.getElementById('user-email');
+const logoutBtn=document.getElementById('logout-btn');
 const dashboardView=document.getElementById('dashboard-view');
 const redeemView=document.getElementById('redeem-view');
 const ordersView=document.getElementById('orders-view');
-const ticketView=document.getElementById('ticket-view');
 const ownerView=document.getElementById('owner-view');
 const redeemInput=document.getElementById('redeem-key-input');
 const redeemBtn=document.getElementById('redeem-key-btn');
@@ -182,39 +161,34 @@ const ownerKeyInput=document.getElementById('owner-key');
 const createKeyBtn=document.getElementById('create-key-btn');
 const keysList=document.getElementById('keys-list');
 const searchKeys=document.getElementById('search-keys');
-const ticketTabs=document.getElementById('ticket-tabs');
-const messageInput=document.getElementById('message-input');
-const sendMessageBtn=document.getElementById('send-message-btn');
+const authScreen=document.getElementById('auth-screen');
 
-// Owner Key
-const OWNER_KEY="KDFIHFdawdd124345#$@#FIGwdwdaHE@";
-
-// --- AUTH SWITCH ---
-btnLogin.addEventListener("click", ()=>{btnLogin.classList.add("active"); btnSignup.classList.remove("active"); loginForm.classList.remove("hidden"); signupForm.classList.add("hidden");});
-btnSignup.addEventListener("click", ()=>{btnSignup.classList.add("active"); btnLogin.classList.remove("active"); loginForm.classList.add("hidden"); signupForm.classList.remove("hidden");});
-
-// Menu
+// Menu buttons
 document.getElementById('menu-dashboard').addEventListener('click',()=>switchView('dashboard'));
 document.getElementById('menu-redeem').addEventListener('click',()=>switchView('redeem'));
 document.getElementById('menu-orders').addEventListener('click',()=>switchView('orders'));
-document.getElementById('menu-ticket').addEventListener('click',()=>switchView('ticket'));
 document.getElementById('menu-owner').addEventListener('click',()=>switchView('owner'));
-
 function switchView(view){
   dashboardView.classList.add('hidden');
   redeemView.classList.add('hidden');
   ordersView.classList.add('hidden');
-  ticketView.classList.add('hidden');
   ownerView.classList.add('hidden');
   document.querySelectorAll('.sidebar button').forEach(b=>b.classList.remove('active'));
   if(view==='dashboard'){dashboardView.classList.remove('hidden'); document.getElementById('menu-dashboard').classList.add('active');}
   if(view==='redeem'){redeemView.classList.remove('hidden'); document.getElementById('menu-redeem').classList.add('active');}
-  if(view==='orders'){ordersView.classList.remove('hidden'); document.getElementById('menu-orders').classList.add('active'); loadOrders();}
-  if(view==='ticket'){ticketView.classList.remove('hidden'); document.getElementById('menu-ticket').classList.add('active'); loadTicketsRealtime();}
-  if(view==='owner'){ownerView.classList.remove('hidden'); document.getElementById('menu-owner').classList.add('active'); loadKeys();}
+  if(view==='orders'){ordersView.classList.remove('hidden'); document.getElementById('menu-orders').classList.add('active');}
+  if(view==='owner'){ownerView.classList.remove('hidden'); document.getElementById('menu-owner').classList.add('active');}
 }
 
-// --- SIGNUP / LOGIN ---
+// AUTH SWITCH
+const btnLogin = document.getElementById("btn-login");
+const btnSignup = document.getElementById("btn-signup");
+const loginForm = document.getElementById("login-form");
+const signupForm = document.getElementById("signup-form");
+btnLogin.addEventListener("click", ()=>{btnLogin.classList.add("active"); btnSignup.classList.remove("active"); loginForm.style.display="block"; signupForm.style.display="none";});
+btnSignup.addEventListener("click", ()=>{btnSignup.classList.add("active"); btnLogin.classList.remove("active"); loginForm.style.display="none"; signupForm.style.display="block";});
+
+// Signup
 signupForm.addEventListener("submit", async e=>{
   e.preventDefault();
   const username = document.getElementById("signup-username").value.trim();
@@ -227,6 +201,7 @@ signupForm.addEventListener("submit", async e=>{
   } catch(err){ alert(err.message); }
 });
 
+// Login
 loginForm.addEventListener("submit", async e=>{
   e.preventDefault();
   const email = document.getElementById("login-email").value.trim();
@@ -235,10 +210,64 @@ loginForm.addEventListener("submit", async e=>{
   catch(err){ alert(err.message); }
 });
 
-// Logout
-logoutBtn.addEventListener("click",()=>auth.signOut());
+// OWNER SPECIAL KEY
+const OWNER_KEY="KDFIHFdawdd124345#$@#FIGwdwdaHE@";
+db.collection("keys").doc(OWNER_KEY).get().then(doc=>{if(!doc.exists){db.collection("keys").doc(OWNER_KEY).set({product:"Owner Access", role:"owner", used:false})}});
 
-// --- Redeem Key ---
+// Load orders
+async function loadOrders(){
+  ordersList.innerHTML="";
+  const user = auth.currentUser;
+  if(!user) return;
+  const snapshot = await db.collection("orders").where("uid","==",user.uid).get();
+  if(snapshot.empty){ ordersList.innerHTML="<tr><td colspan='2' style='color:var(--muted)'>No orders yet</td></tr>"; return;}
+  snapshot.forEach(doc=>{
+    const d = doc.data();
+    const tr=document.createElement("tr");
+    tr.innerHTML=`<td>${d.product}</td><td>${new Date(d.redeemedAt.seconds*1000).toLocaleString()}</td>`;
+    ordersList.appendChild(tr);
+  });
+}
+
+// Load keys for owner
+async function loadKeys(){
+  keysList.innerHTML="";
+  const snapshot = await db.collection("keys").get();
+  snapshot.forEach(doc=>{
+    const d = doc.data();
+    const tr=document.createElement("tr");
+    const statusClass = d.used ? "status-used" : "status-unused";
+    tr.innerHTML=`
+      <td>${doc.id}</td>
+      <td>${d.product}</td>
+      <td class="${statusClass}">${d.used ? "Used":"Unused"}</td>
+      <td>${d.redeemedBy||"-"}</td>
+      <td><span class="delete-btn" data-key="${doc.id}">Delete</span></td>
+    `;
+    keysList.appendChild(tr);
+  });
+
+  // Delete button handler
+  document.querySelectorAll(".delete-btn").forEach(btn=>{
+    btn.addEventListener("click", async ()=>{
+      const key = btn.dataset.key;
+      if(confirm(`Delete key ${key}?`)){
+        await db.collection("keys").doc(key).delete();
+        loadKeys();
+      }
+    });
+  });
+}
+
+// Search keys
+searchKeys.addEventListener("input", ()=>{
+  const filter = searchKeys.value.toLowerCase();
+  document.querySelectorAll("#keys-list tr").forEach(tr=>{
+    tr.style.display = tr.textContent.toLowerCase().includes(filter) ? "" : "none";
+  });
+});
+
+// Redeem
 redeemBtn.addEventListener("click", async ()=>{
   const key = redeemInput.value.trim();
   const user = auth.currentUser;
@@ -254,29 +283,13 @@ redeemBtn.addEventListener("click", async ()=>{
     return;
   }
   await db.collection("keys").doc(key).update({used:true, redeemedBy:user.uid});
-  await db.collection("orders").add({uid:user.uid, product:data.product, redeemedAt:new Date(), status:"Pending", key:key});
+  await db.collection("orders").add({uid:user.uid, product:data.product, redeemedAt:new Date()});
   alert(`Redeemed ${data.product}`);
   loadOrders();
   loadKeys();
 });
 
-// Load Orders
-async function loadOrders(){
-  ordersList.innerHTML="";
-  const user = auth.currentUser;
-  if(!user) return;
-  const snapshot = await db.collection("orders").where("uid","==",user.uid).get();
-  if(snapshot.empty){ ordersList.innerHTML="<tr><td colspan='3' style='color:var(--muted)'>No orders yet</td></tr>"; return;}
-  snapshot.forEach(doc=>{
-    const d = doc.data();
-    const tr=document.createElement("tr");
-    const statusColor = d.status==="Pending"?"status-pending":"status-unused";
-    tr.innerHTML=`<td>${d.product}</td><td>${new Date(d.redeemedAt.seconds*1000).toLocaleString()}</td><td class="${statusColor}">${d.status}</td>`;
-    ordersList.appendChild(tr);
-  });
-}
-
-// Owner Keys
+// Create key
 createKeyBtn.addEventListener("click", async ()=>{
   const product = ownerProductName.value.trim();
   const key = ownerKeyInput.value.trim();
@@ -290,79 +303,8 @@ createKeyBtn.addEventListener("click", async ()=>{
   alert("Key created!");
 });
 
-async function loadKeys(){
-  keysList.innerHTML="";
-  const snapshot = await db.collection("keys").get();
-  snapshot.forEach(doc=>{
-    const d = doc.data();
-    const tr=document.createElement("tr");
-    const statusClass = d.used ? "status-used" : "status-unused";
-    tr.innerHTML=`<td>${doc.id}</td><td>${d.product}</td><td class="${statusClass}">${d.used?"Used":"Unused"}</td><td>${d.redeemedBy||"-"}</td><td><span class="delete-btn" data-key="${doc.id}">Delete</span></td>`;
-    keysList.appendChild(tr);
-  });
-  document.querySelectorAll(".delete-btn").forEach(btn=>{
-    btn.addEventListener("click", async ()=>{
-      const key = btn.dataset.key;
-      if(confirm(`Delete key ${key}?`)){
-        await db.collection("keys").doc(key).delete();
-        loadKeys();
-      }
-    });
-  });
-}
-
-// Search Keys
-searchKeys.addEventListener("input", ()=>{
-  const filter = searchKeys.value.toLowerCase();
-  document.querySelectorAll("#keys-list tr").forEach(tr=>{
-    tr.style.display = tr.textContent.toLowerCase().includes(filter) ? "" : "none";
-  });
-});
-
-// --- Ticket System ---
-let activeTicketId = null;
-async function loadTicketsRealtime(){
-  const user = auth.currentUser;
-  if(!user) return;
-  const snapshot = await db.collection("tickets").where("uid","==",user.uid).get();
-  ticketTabs.innerHTML="";
-  snapshot.forEach(doc=>{
-    const d = doc.data();
-    const tab = document.createElement("div");
-    tab.textContent = `${d.key} (${d.status})`;
-    tab.classList.add("ticket-tab");
-    tab.dataset.id = doc.id;
-    if(activeTicketId===doc.id) tab.classList.add("active");
-    tab.addEventListener("click", ()=>{activeTicketId=doc.id; renderMessages(doc.id); loadTicketsRealtime();});
-    ticketTabs.appendChild(tab);
-  });
-}
-
-async function renderMessages(ticketId){
-  const messagesDiv = document.getElementById("ticket-tabs");
-  const ticketRef = db.collection("tickets").doc(ticketId);
-  const doc = await ticketRef.get();
-  if(!doc.exists) return;
-  const d = doc.data();
-  messagesDiv.innerHTML="";
-  d.messages?.forEach(msg=>{
-    const m = document.createElement("div");
-    m.classList.add("message");
-    m.innerHTML=`<b>${msg.sender}</b>: ${msg.text} <small>(${msg.status})</small>`;
-    messagesDiv.appendChild(m);
-  });
-}
-
-// Send message
-sendMessageBtn.addEventListener("click", async ()=>{
-  const text = messageInput.value.trim();
-  const user = auth.currentUser;
-  if(!text || !user || !activeTicketId) return;
-  const ticketRef = db.collection("tickets").doc(activeTicketId);
-  await ticketRef.update({messages: firebase.firestore.FieldValue.arrayUnion({sender:user.email,text,status:"Delivered"}),updatedAt:new Date()});
-  messageInput.value="";
-  renderMessages(activeTicketId);
-});
+// Logout
+logoutBtn.addEventListener("click",()=>auth.signOut());
 
 // Auth state
 auth.onAuthStateChanged(async user=>{
@@ -377,13 +319,11 @@ auth.onAuthStateChanged(async user=>{
     else ownerControlsBtn.classList.add("hidden");
     loadOrders();
     loadKeys();
-    loadTicketsRealtime();
   } else {
     authScreen.style.display="flex";
     dashboardView.classList.add("hidden");
     redeemView.classList.add("hidden");
     ordersView.classList.add("hidden");
-    ticketView.classList.add("hidden");
     ownerView.classList.add("hidden");
     logoutBtn.classList.add("hidden");
   }
